feat: basic photo collection & display

--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -3,5 +3,11 @@ import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout title="Photo Gallery">
-  <p>A work in progress...</p>
+  <div class="prose">
+    <h1>Photo Gallery</h1>
+    <p>
+      <b>A quick organisational note:</b> Photos are grouped with tags; a photo may
+      have multiple tags so may appear in multiple places. There are no "albums"
+    </p>
+  </div>
 </Layout>
