fix: debug, get it to build, edit dir names

--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -14,7 +14,7 @@ if (!collTag) throw `Invalid tag "${tag}"`;
 <div
   class={`${classNames ?? ""} ${collTag.data.themeColor ?? "bg-black"} p-1 rounded-md`}
 >
-  <a href={`/gallery/tag/${collTag.id}`} class="text-white text-center w-full inline-block">
+  <a href={`/gallery/tag/${collTag.id}/1`} class="text-white text-center w-full inline-block">
     {collTag.id}
   </a>
 </div>
