--- a/src/pages/gallery/[photoid].astro
+++ b/src/pages/gallery/[photoid].astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from "astro:content";
 import Layout from "@/layouts/Layout.astro";
-import Picture from "astro/components/Picture.astro";
+import { Picture } from "astro:assets";
 import Describe from "@/components/Describe.astro";
 import Tag from "@/components/Tag.astro";
 
@@ -12,6 +12,8 @@ export async function getStaticPaths() {
     props: { photo },
   }));
 }
+
+const images = import.meta.glob<{ default: ImageMetadata }>("/src/content/photos/*.jpg")
 
 const { photo } = Astro.props;
 ---
@@ -24,7 +26,7 @@ const { photo } = Astro.props;
     <div class="lg:w-3/4 xl:w-1/2">
       <Picture
         alt={photo.data.meta.detail}
-        src={photo.data.photo}
+        src={images[photo.data.key]!()}
         formats={["jpg", "webp"]}
         loading="eager"
       />
