--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -18,15 +18,18 @@ const photos = await getCollection("photos");
       There are a total of <b>{photos.length}</b> unique photos in the gallery.
     </p>
     <h2>By Tags</h2>
-    <div class="not-prose">
-      <div class="flex flex-col gap-2">
-        {
-          tags.map((t) => (
-            <div class="flex items-center gap-2">
-              <Tag tag={t.id} />{" "}
-              <div>
-                <span>
-                  — {t.data.description} (containing
+  </div>
+  <div class="mt-4">
+    <div class="flex flex-col gap-2">
+      {
+        tags.map((t) => (
+          <div class="flex items-center gap-2">
+            <Tag tag={t.id} />{" "}
+            <div>
+              <>
+                <span>— {t.data.description} </span>
+                <span class="text-sm italic">
+                  (containing
                   {
                     photos.filter((p) =>
                       p.data.meta.tags.some((pt) => pt.id === t.id)
@@ -34,11 +37,11 @@ const photos = await getCollection("photos");
                   }
                   photos)
                 </span>
-              </div>
+              </>
             </div>
-          ))
-        }
-      </div>
+          </div>
+        ))
+      }
     </div>
   </div>
 </Layout>
