feat: responsively sized images

--- a/src/pages/gallery/[photoid].astro
+++ b/src/pages/gallery/[photoid].astro
@@ -29,6 +29,7 @@ const { photo } = Astro.props;
         src={images[photo.data.key]!()}
         formats={["jpg", "webp"]}
         loading="eager"
+        layout="full-width"
       />
     </div>
     <div>
