--- a/src/pages/gallery/tag/[tagid]/[page].astro
+++ b/src/pages/gallery/tag/[tagid]/[page].astro
@@ -42,7 +42,7 @@ type PhotoEntry = CollectionEntry<"photos">;
       page.data.map((photo: PhotoEntry) => {
         return (
           <div class="bg-gray-300 p-2 flex flex-col gap-2">
-            <Image src={images[photo.data.key]!()} alt={photo.data.meta.detail} />
+            <Image layout="constrained" src={images[photo.data.key]!()} alt={photo.data.meta.detail} />
             <div>
               <a
                 href={`/gallery/${photo.id}`}
