fix: missing margin for y-axis

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ interface Props {
 
   <body class="min-h-full min-w-full p-2 pb-0 bg-black/5">
     <PageHeader />
-    <div class="mx-4">
+    <div class="m-4">
       <slot />
     </div>
   </body>
