chore: new regional tag

--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -15,7 +15,12 @@ const photos = await getCollection("photos");
       have multiple tags so may appear in multiple places. There are no "albums"
     </p>
     <p>
-      There are a total of <b>{photos.length}</b> unique photos in the gallery.
+      I have tried to give a detailed description for each photo, although these
+      are not searchable yet. This might become a feature in the future.
+    </p>
+    <p>
+      There are a total of <b>{photos.length}</b> unique photos in the gallery. More
+      on the way!
     </p>
     <h2>By Tags</h2>
   </div>
