feat: add GitHub link

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,8 +17,8 @@ import bskyLogo from "@/assets/bsky_logo.svg";
       This is a dead-simple, mostly statically generated site leveraging <a
         href="https://astro.build"
         target="_blank">{Astro.generator}</a
-      >. There is honestly not much else to it technically. I might put it up on
-      GitHub some day but the code is pretty ugly.
+      >. There is honestly not much else to it technically. The code is up for those
+      who want to take a gander: <a href="https://github.com/azyritedev/railblog" target="_blank">GitHub</a>
     </p>
     <p>
       TailwindCSS is used for styling because I can't actually write CSS
