--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -60,6 +60,7 @@ for (const tag of tags) {
             <div class="flex flex-wrap gap-2">
               {tags
                 .filter((t) => t.data.group === g)
+                .sort((tagA, tagB) => tagA.id.localeCompare(tagB.id))
                 .map((t) => (
                   <Tag tag={t.id} />
                 ))}
