feat: add date accuracy notice

--- a/src/pages/gallery/[photoid].astro
+++ b/src/pages/gallery/[photoid].astro
@@ -95,6 +95,7 @@ for (const related of backLinkRelatedPhotos) {
     </div>
     <h2 class="text-lg font-bold">Photo Details</h2>
     <div class="ml-4">
+      <p class="text-sm">Notice: Exact hours/minute timings may not be accurate but the date should be correct.</p>
       <Describe
         descriptions={{
           Photographer: photo.data.meta.author.id,
